@@ -3,6 +3,6 @@ DIST LdapImport.tgz 22008 RMD160 1e8ffeae5bf755bd1bf122dd8fb22067ef134c17 SHA1 3
 DIST ol-macro-expand.pl 1514 RMD160 0c634925909f26ce51fd172de2a4de9f7753fe08 SHA1 bd59fcdbcae45ef3f66a7d88f73e29b4dd1371bb SHA256 de7925bee6e5f1bbcfea43493e2474489a6b1cce3aa077be13a058f6a21c01d0
 DIST ol-schema-migrate.pl 14877 RMD160 30e1646b466c754ea61959c0061a29e4f8c509f2 SHA1 7fc3817e01f8341dcb71efd251455be8db723005 SHA256 10d7e815b5627f5decdce41b7f53efe24e5948d42bb80c9e266f869873667872
 DIST ol2rhds.pl 12846 RMD160 0bc423c82e7de918695cbbe94a36d0f40ddbbd59 SHA1 18c300f7e7eaca1b38de7ce9af3e63de0241fa44 SHA256 ca6aa6a6c69450de879dbd08e5fc35525202b4e599458fd13c610145de2a447d
-EBUILD ldapimport-1.25.ebuild 1526 RMD160 5c969ce97352f587b36d6a7593f372a7a305f6d4 SHA1 39cce69c0a56ab591367b02605ec60f6bb35567e SHA256 ce9e2016436eebb5537b6aa067fc8b092e5397c3f541977c699bf81fa96c7387
-MISC ChangeLog 356 RMD160 c53695c99bd561ef31034e1be436128e6d27aa7d SHA1 c86f687d403447911f82e4cc85ef6be9f50f8964 SHA256 8b290f82c5e359e8992e09d67dbeee09739aca5882173743dc15f93651403898
+EBUILD ldapimport-1.25.ebuild 1550 RMD160 357741703be0b296f2940a8989df4886ab2a949c SHA1 4f60f6f21578b4d8b1b96e3d85d55c36720865e5 SHA256 0223f116d04763a6fea23eb9f274d663402f8de4f51a4c45bde39645ea3ab930
+MISC ChangeLog 472 RMD160 d3949c92985d47224502dbbb054ca4e0278de59e SHA1 63003337e570e22c620f1f7dfbe6a619d9ac7495 SHA256 1e152485405c3bf9791f87fce47b4d2089fe329377a83333cc84c7ff62b2c814
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
