@@ -6,8 +6,8 @@ EAPI="2"
 
 inherit git cmake-utils
 
-DESCRIPTION="Graphical interface for QEMU emulator. Using Qt4."
-HOMEPAGE="http://sourceforge.net/projects/aqemu/"
+DESCRIPTION="Graphical interface for QEMU and KVM emulators. Using Qt4."
+HOMEPAGE="http://sourceforge.net/projects/aqemu"
 EGIT_REPO_URI="git://aqemu.git.sourceforge.net/gitroot/aqemu/aqemu"
 
 LICENSE="GPL-2"
@@ -30,15 +30,15 @@ src_unpack() {
 
 src_install() {
 #        dobin "${S}"_build/aqemu
-        if use linguas_ru;then
-                insinto /usr/share/aqemu
-                doins "${S}"_build/Russian.qm
-        fi
+		if use linguas_ru;then
+				insinto /usr/share/aqemu
+				doins "${S}"_build/Russian.qm
+		fi
 #        insinto /usr/share/aqemu/os_icons
 #        doins "${S}"/os_icons/*.png
 #        insinto /usr/share/aqemu/os_templates/
 #        doins "${S}"/os_templates/*.aqvmt
 #        domenu "${S}/menu_data/aqemu.desktop"
 #        doicon "${S}"/menu_data/aqemu_*.png
-cmake-utils_src_install
+	cmake-utils_src_install
 }
