@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru> ldapimport-1.25.ebuild:
+  add dev-perl/log-dispatch in depend
+
   30 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> ldapimport-1.25.ebuild,
   +files/UidFixup.pl:
   add UidFixup script
